# strangeioc

./: .gitignore  README.md  README_CPP.md
Example/TouchService/TouchService/: TouchService.cs
PoolLib/: PoolLib.csproj
PoolLib/UnityEngine/: Debug.cs
Source/: StrangeIoC.csproj
Source/UnityEngineStubs/: UnityEngine.cs
StrangeIoC/framework/binding/: Binder.cs  BinderException.cs  BinderExceptionType.cs  Binding.cs  BindingConst.cs  BindingConstraintType.cs  IBinder.cs  IBinding.cs  IManagedList.cs  ISemiBinding.cs  SemiBinding.cs
StrangeIoC/framework/command/: Command.cs  CommandBinder.cs  CommandBinding.cs  CommandException.cs  CommandExceptionType.cs  CommandKeys.cs  EventCommand.cs  EventCommandBinder.cs  ICommand.cs  ICommandBinder.cs  ICommandBinding.cs  IPooledCommandBinder.cs  SignalCommandBinder.cs
StrangeIoC/framework/context/: Context.cs  ContextEvent.cs  ContextException.cs  ContextExceptionType.cs  ContextKeys.cs  ContextView.cs  CrossContext.cs  CrossContextBridge.cs  IContext.cs  IContextView.cs  MVCSContext.cs
StrangeIoC/framework/dispatcher/: IDispatcher.cs  (+13 more)
StrangeIoC_CPP/: CMakeLists.txt  NOTICE.txt  StrangeIoC_CPP.sln  StrangeIoC_CPP.vcxproj
StrangeIoC_CPP/Unity/: UnityStubs.h
StrangeIoC_CPP/framework/binding/: Binder.cpp  Binder.h  Binding.cpp  Binding.h  IBinding.h
StrangeIoC_CPP/framework/dispatcher/: EventDispatcher.h
StrangeIoC_CPP/framework/injector/: Injector.h
StrangeIoC_CPP/framework/signal/: Signal.h
StrangeIoC_CPP/tests/: main.cpp
Tests/: InjectionBindingTests.cs  PoolTests.cs  StrangeIoCTests.csproj  Tests.csproj
(+71 files in other folders)
